--- a/index.html
+++ b/index.html
@@ -87,23 +87,31 @@
                     <ul class="list team-list">
                         <li class="team-list-item">
                             <img class="team-list-img" src="images/img4.jpg" alt="человек" width="270">
-                            <h3 class="team-list-title">Игорь Демьяненко</h3>
-                            <p class="team-list-post-title" lang="en">Product Designer</p>
+                            <div class="team-text">
+                                <h3 class="team-list-title">Игорь Демьяненко</h3>
+                                <p class="team-list-post-title" lang="en">Product Designer</p>
+                            </div>
                         </li>
                         <li class="team-list-item">
                             <img class="team-list-img" src="images/img5.jpg" alt="человек" width="270">
-                            <h3 class="team-list-title">Ольга Репина</h3>
-                            <p class="team-list-post-title" lang="en">Frontend Developer</p>
+                            <div class="team-text">
+                                <h3 class="team-list-title">Ольга Репина</h3>
+                                <p class="team-list-post-title" lang="en">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="team-list-item">
                             <img class="team-list-img" src="images/img6.jpg" alt="человек" width="270"> 
-                            <h3 class="team-list-title">Николай Тарасов</h3>
-                            <p class="team-list-post-title" lang="en">Marketing</p>
+                            <div class="team-text">
+                                <h3 class="team-list-title">Николай Тарасов</h3>
+                                <p class="team-list-post-title" lang="en">Marketing</p>
+                            </div>
                         </li>
                         <li class="team-list-item">
                             <img class="team-list-img" src="images/img7.jpg" alt="человек" width="270">
-                            <h3 class="team-list-title">Михаил Ермаков</h3>
-                            <p class="team-list-post-title" lang="en">UI Designer</p>
+                            <div class="team-text">
+                                <h3 class="team-list-title">Михаил Ермаков</h3>
+                                <p class="team-list-post-title" lang="en">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
