--- a/portfolio.html
+++ b/portfolio.html
@@ -51,58 +51,76 @@
             <div class="container">
                 <ul class="list product-list">
                     <li class="product-item">
-                        <img class="product-img" 
+                        <img class="product-img" width: 370px 
                         src="images/portfolio_img.jpg" alt="ноутбук">
-                        <h2 class="product-title">Технокряк</h2>
-                        <p class="product-post-title">Веб-сайт</p>
+                        <div class="product-title-box">
+                            <h2 class="product-title">Технокряк</h2>
+                            <p class="product-post-title">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" 
+                        <img class="product-img" width: 370px 
                         src="images/portfolio_img2.jpg" alt="два баскетболиста">
-                        <h2 class="product-title" >Постер New Orlean vs Golden Star</h2>
-                        <p class="product-post-title">Дизайн</p>
+                        <div class="product-title-box">
+                            <h2 class="product-title">Постер New Orlean vs Golden Star</h2>
+                            <p class="product-post-title">Дизайн</p>
+                        </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" 
+                        <img class="product-img" width: 370px 
                         src="images/portfolio_img3.jpg" alt="эмблема в форме рыбы с названием ресторана">
-                        <h2 class="product-title">Ресторан Seafood</h2>
-                        <p class="product-post-title">Приложение/p>
+                        <div class="product-title-box">
+                            <h2 class="product-title">Ресторан Seafood</h2>
+                            <p class="product-post-title">Приложение/p>
+                        </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" 
+                        <img class="product-img" width: 370px 
                         src="images/portfolio_img4.jpg" alt="наушники">
-                        <h2 class="product-title">Проект Prime</h2>
-                        <p class="product-post-title">Маркетинг</p>
+                        <div class="product-title-box">
+                            <h2 class="product-title">Проект Prime</h2>
+                            <p class="product-post-title">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" 
+                        <img class="product-img" width: 370px 
                         src="images/portfolio_img5.jpg" alt="два кубика">
-                        <h2 class="product-title">Проект Boxes</h2>
-                        <p class="product-post-title">Приложение</p>
+                        <div class="product-title-box">
+                            <h2 class="product-title">Проект Boxes</h2>
+                            <p class="product-post-title">Приложение</p>
+                        </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" 
+                        <img class="product-img" width: 370px 
                         src="images/portfolio_img6.jpg" alt="экран компьютера">
-                        <h2 class="product-title" lang="en">Inspiration has no Borders</h2>
-                        <p class="product-post-title">Веб-сайт</p>
+                        <div class="product-title-box">
+                            <h2 class="product-title" lang="en">Inspiration has no Borders</h2>
+                            <p class="product-post-title">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" 
+                        <img class="product-img" width: 370px 
                         src="images/portfolio_img7.jpg" alt="журнал">
-                        <h2 class="product-title">Издание Limited Edition</h2>
-                        <p class="product-post-title">Дизайн</p>
+                        <div class="product-title-box">
+                            <h2 class="product-title">Издание Limited Edition</h2>
+                            <p class="product-post-title">Дизайн</p>
+                        </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" 
+                        <img class="product-img" width: 370px 
                         src="images/portfolio_img8.jpg" alt="вкладыш">
-                        <h2 class="product-title">Проект LAB</h2>
-                        <p class="product-post-title">Маркетинг</p>
+                        <div class="product-title-box">
+                            <h2 class="product-title">Проект LAB</h2>
+                            <p class="product-post-title">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" 
+                        <img class="product-img" width: 370px 
                         src="images/portfolio_img9.jpg" alt="ноутбук">
-                        <h2 class="product-title" lang="en">Growing Business</h2>
-                        <p class="product-post-title">Приложение</p>
+                        <div class="product-title-box">
+                            <h2 class="product-title" lang="en">Growing Business</h2>
+                            <p class="product-post-title">Приложение</p>
+                        </div>
                     </li>
                 </ul>
             </div>
