--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
         <header class="header">
             <div class="container header-box">
                 <nav class="nav">
-                    <a class="link nav-link" href="index.html" lang="en">Web <span class="nav-span">Studio</span></a>
+                    <a class="link logo" href="index.html" lang="en">Web<span class="header-span">Studio</span></a>
                     <ul class="list nav-list">
-                        <li class="nav-list-item">
-                            <a class="link nav-list-link" href="index.html">Студия</a>
+                        <li class="nav-item">
+                            <a class="link nav-link" href="index.html">Студия</a>
                         </li>
-                        <li class="nav-list-item">
-                            <a class="link nav-list-link" href="portfolio.html">Портфолио</a>
+                        <li class="nav-item">
+                            <a class="link nav-link" href="portfolio.html">Портфолио</a>
                         </li>
-                        <li class="nav-list-item">
-                            <a class="link nav-list-link" href="#">Контакты</a>
+                        <li class="nav-item">
+                            <a class="link nav-link" href="#">Контакты</a>
                         </li>
                     </ul>
                 </nav>
                 <ul class="list header-address">
-                    <li class="header-address-item"><a class="link header-address-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="header-address-item"><a class="link header-address-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="header-address-item"><a class="link header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="header-address-item"><a class="link header-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </div>
         </header>
@@ -48,24 +48,24 @@
                 <div class="container ">
                     <h2 class="visually-hidden">Преимущества работы с нами</h2>
                     <ul class="list benefits-list">
-                        <li class="benefits-list-item">
-                            <h3 class="benefits-list-title">Внимание к деталям</h3>
-                            <p class="benefits-list-post-title">Идейные соображения, а также начало повседневной работы по формированию
+                        <li class="benefits-item">
+                            <h3 class="benefits-title">Внимание к деталям</h3>
+                            <p class="benefits-text">Идейные соображения, а также начало повседневной работы по формированию
                                 позиции.</p>
                         </li>
-                        <li class="benefits-list-item">
-                            <h3 class="benefits-list-title">Пунктуальность</h3>
-                            <p class="benefits-list-post-title">Задача организации, в особенности же рамки и место обучения кадров влечет за
+                        <li class="benefits-item">
+                            <h3 class="benefits-title">Пунктуальность</h3>
+                            <p class="benefits-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
                                 собой.</p>
                         </li>
-                        <li class="benefits-list-item">
-                            <h3 class="benefits-list-title">Планирование</h3>
-                            <p class="benefits-list-post-title">Равным образом консультация с широким активом в значительной степени
+                        <li class="benefits-item">
+                            <h3 class="benefits-title">Планирование</h3>
+                            <p class="benefits-text">Равным образом консультация с широким активом в значительной степени
                                 обуславливает.</p>
                         </li>
-                        <li class="benefits-list-item">
-                            <h3 class="benefits-list-title">Современные технологии</h3>
-                            <p class="benefits-list-post-title">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        <li class="benefits-item">
+                            <h3 class="benefits-title">Современные технологии</h3>
+                            <p class="benefits-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                             </p>
                         </li>
                     </ul>
@@ -75,9 +75,9 @@
                 <div class="container">
                     <h2 class="about-title">Чем мы занимаемся</h2>
                     <ul class="list about-list">
-                        <li class="about-list-item"><img class="about-list-img" src="images/img.jpg" alt="печать на клавиатуре" width="370"></li>
-                        <li class="about-list-item"><img class="about-list-img" src="images/img2.jpg" alt="работа в телефоне и ноутбуке" width="370"></li>
-                        <li class="about-list-item"><img class="about-list-img" src="images/img3.jpg" alt="катинка на планшете" width="370"></li>
+                        <li class="about-item"><img class="about-img" src="images/img.jpg" alt="печать на клавиатуре" width="370"></li>
+                        <li class="about-item"><img class="about-img" src="images/img2.jpg" alt="работа в телефоне и ноутбуке" width="370"></li>
+                        <li class="about-item"><img class="about-img" src="images/img3.jpg" alt="катинка на планшете" width="370"></li>
                     </ul>
                 </div>
             </section>
@@ -85,32 +85,32 @@
                 <div class="container team-box">
                 <h2 class="team-title">Наша команда</h2>
                     <ul class="list team-list">
-                        <li class="team-list-item">
-                            <img class="team-list-img" src="images/img4.jpg" alt="человек" width="270">
+                        <li class="team-item">
+                            <img class="team-img" src="images/img4.jpg" alt="человек" width="270">
                             <div class="team-text">
                                 <h3 class="team-list-title">Игорь Демьяненко</h3>
-                                <p class="team-list-post-title" lang="en">Product Designer</p>
+                                <p class="team-list-text" lang="en">Product Designer</p>
                             </div>
                         </li>
-                        <li class="team-list-item">
-                            <img class="team-list-img" src="images/img5.jpg" alt="человек" width="270">
+                        <li class="team-item">
+                            <img class="team-img" src="images/img5.jpg" alt="человек" width="270">
                             <div class="team-text">
                                 <h3 class="team-list-title">Ольга Репина</h3>
-                                <p class="team-list-post-title" lang="en">Frontend Developer</p>
+                                <p class="team-list-text" lang="en">Frontend Developer</p>
                             </div>
                         </li>
-                        <li class="team-list-item">
-                            <img class="team-list-img" src="images/img6.jpg" alt="человек" width="270"> 
+                        <li class="team-item">
+                            <img class="team-img" src="images/img6.jpg" alt="человек" width="270"> 
                             <div class="team-text">
                                 <h3 class="team-list-title">Николай Тарасов</h3>
-                                <p class="team-list-post-title" lang="en">Marketing</p>
+                                <p class="team-list-text" lang="en">Marketing</p>
                             </div>
                         </li>
-                        <li class="team-list-item">
-                            <img class="team-list-img" src="images/img7.jpg" alt="человек" width="270">
+                        <li class="team-item">
+                            <img class="team-img" src="images/img7.jpg" alt="человек" width="270">
                             <div class="team-text">
                                 <h3 class="team-list-title">Михаил Ермаков</h3>
-                                <p class="team-list-post-title" lang="en">UI Designer</p>
+                                <p class="team-list-text" lang="en">UI Designer</p>
                             </div>
                         </li>
                     </ul>
@@ -119,13 +119,13 @@
         </main>
         <footer class="footer">
             <div class="container footer-box">
-                <a class="link footer-link logo" href="index.html" lang="en">Web <span class="footer-span">Studio</span></a>
-                <address class="footer-address">
-                    <ul class="list footer-address-list">
-                        <li class="footer-address-item"><a class="link footer-address-link" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                <a class="link logo" href="index.html" lang="en">Web<span class="footer-span">Studio</span></a>
+                <address class="address">
+                    <ul class="list address-list">
+                        <li class="address-item"><a class="link address-link" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
                             target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li  class="footer-address-item"><a class="link footer-address-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li  class="footer-address-item"><a class="link footer-address-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                        <li  class="address-item"><a class="link address-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li  class="address-item"><a class="link address-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
